Ajustando nome do projeto e versão no package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devops",
-  "version": "1.0.0",
+  "name": "devopsss",
+  "version": "1.0.0.7.96",
   "description": "",
   "main": "index.js",
   "scripts": {
