Ajustando nome do projeto e versão no package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devops",
-  "version": "1.0.0",
+  "name": "DevOpss",
+  "version": "1.0.0.98.61",
   "description": "",
   "main": "index.js",
   "scripts": {
