Ajustando nome do projeto e versão no package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "devopsss",
-  "version": "1.0.9",
+  "name": "DevOpss",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
